Fixed layout so that all assets are loaded correctly. Still having minor issues with the css for the nav bar. Arrows for dropdowns are not being displayed and arrows for sub dropdowns are not being correctly aligned.

--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -1379,7 +1379,7 @@ $topbar-bg-color: $royal-blue;
 $topbar-bg: $topbar-bg-color;
 
 // Height and margin
-$topbar-height: 2em;
+$topbar-height: 2rem;
 // $topbar-margin-bottom: 0;
 
 // Controlling the styles for the title in the top bar
